# Comic-Book-Reader

./: Comic Book Reader.pptx  Diagramme_contexte.md  README.md  Rapport final.docx  diagramme_classes.mdj  diagramme_open_book.md  diagramme_paquetage.md  diagramme_seq_open_file.md  diagramme_seq_open_file_avec_architecture.html  diagramme_seq_open_file_avec_architecture.md  exemple_meta_donnee.toc  notes.md
.cache/clangd/index/: AbstractImage.h.D578348575257051.idx  BMPImage.cpp.81B8F336C87621B3.idx  BMPImage.h.57105CA1A6E5C466.idx  FileHandler.cpp.0488E66C085FF769.idx  FileHandler.h.03A9D03E6040CB74.idx  Filter.cpp.3670133C1C1AF28E.idx  Filter.h.49011569119EBE3F.idx  Filter.h.DDD4531EEF476A0D.idx  ImageProcessor.cpp.2A2491332B689B99.idx  ImageProcessor.h.1654D53FAC39C0E2.idx  JPEGImage.cpp.029D89014A604162.idx  JPEGImage.h.FCA3745253D716E6.idx  PNGImage.cpp.A183BCC9FE047C93.idx  PNGImage.h.2C313AEF6745409A.idx  PageView.cpp.791A6B5205E25AF5.idx  PageView.h.B65E7768AD4A361D.idx  main.cpp.DB6579A7BD52C9F1.idx  mainwindow.cpp.36D2A89CFEF515F7.idx  mainwindow.h.1D25A99573D19E53.idx
ArchiveHandler/: CMakeLists.txt  main.cpp
Model/infrastructure/: ImageProcessor.cpp  ImageProcessor.h
Model/model/: AbstractFilter.cpp  AbstractFilter.h  AbstractImage.cpp  AbstractImage.h  CacheManager.cpp  JPEGImage.cpp  Library.cpp  PDFBook.cpp  PNGImage.cpp  PNGImage.h  Page.h  TOC.cpp  Tag.cpp  Tag.h  TextEnhancementFilter.cpp
Model/presentation/: LibraryView.h  PageView.cpp  PageView.h  SettingView.h  UIManager.cpp  UIManager.h
Model/repository/: ArchiveHandler.cpp  FileHandler.cpp  FileHandler.h
html-docs/contents/: element_index.html  navigation.html
infrastructure/: Filter.cpp  Filter.h  ImageProcessor.cpp  ImageProcessor.h
model/: AbstractBook.cpp  AbstractBook.h  AbstractImage.h  BMPImage.cpp  BMPImage.h  BookManager.cpp  BookManager.h  CBRBook.cpp  CBRBook.h  CBZBook.cpp  CBZBook.h  CacheManager.cpp  CacheManager.h  Filter.h  JPEGImage.cpp  JPEGImage.h  Library.h  LowPassFilter.cpp  LowPassFilter.h  PDFBook.cpp  PDFBook.h  PLoader.cpp  PLoader.h  PNGImage.cpp  PNGImage.h  Page.cpp  Page.h  PageLoader.cpp  PageLoader.h  QImageAdapter.cpp  QImageAdapter.h  TOC.h  TOCManager.cpp  TOCManager.h  TagManager.cpp  TagManager.h  TextEnhancementFilter.h
presentation/: CMakeLists.txt  LibraryView.cpp  LibraryView.h  PageView.cpp  PageView.h  SettingView.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
presentation/resources/: resources.qrc
repository/: ArchiveHandler.cpp  ArchiveHandler.h  FileHandler.cpp  FileHandler.h  IFileHandler.h  MetaDataHandler.cpp  MetaDataHandler.h
